<resources>
    <string name="app_name">Sudoku</string>
    <string name="restore">Undo</string>
    <string name="erase">Erase</string>
    <string name="note">Note</string>
    <string name="count">Count Down</string>
    <string name="correctOn">开启纠错</string>
    <string name="colorOn">开启颜色</string>
    <string name="easy">简单</string>
    <string name="medium">中等</string>
    <string name="hard">困难</string>
    <string name="devil">极难</string>
    <string name="chooseLevel">选择难度</string>
    <string name="chooseType">选择模式</string>
    <string name="typeFour">四   宫</string>
    <string name="typeNine">九   宫</string>
    <string name="resumeLast">继续上一次</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
