<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".ChooseLevel">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/chooseLevel"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/easylevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/easy" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_border_black_24dp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_border_black_24dp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_border_black_24dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mediumlevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/medium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_border_black_24dp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_border_black_24dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hardlevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/hard" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_border_black_24dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/devil_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/devil" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:background="@android:color/background_light"
                android:contentDescription="@string/easy"
                android:tint="#ffcc00"
                app:srcCompat="@drawable/ic_star_black_24dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>